crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F501_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F501 `%`-format string has invalid format string: incomplete format
 --> F50x.py:1:1
  |
1 | '%(foo)' % {'foo': 'bar'}  # F501
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
