crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F502_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F502 `%`-format string expected mapping but got sequence
 --> F50x.py:9:1
  |
9 | '%(bar)s' % (1, 2, 3)  # F502
  | ^^^^^^^^^^^^^^^^^^^^^
  |
