crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F503_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F503 `%`-format string expected sequence but got mapping
  --> F50x.py:10:1
   |
10 | '%s %s' % {'k': 'v'}  # F503
   | ^^^^^^^^^^^^^^^^^^^^
   |
