crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F505_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F505 `%`-format string is missing argument(s) for placeholder(s): bar
 --> F50x.py:7:1
  |
7 | '%(bar)s' % {}  # F505
  | ^^^^^^^^^^^^^^
  |
