crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F506_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F506 `%`-format string has mixed positional and named placeholders
 --> F50x.py:2:1
  |
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

F506 `%`-format string has mixed positional and named placeholders
 --> F50x.py:3:1
  |
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

F506 `%`-format string has mixed positional and named placeholders
  --> F50x.py:11:1
   |
11 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
