crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F507_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
 --> F50x.py:5:1
  |
5 | '%s %s' % (1,)  # F507
  | ^^^^^^^^^^^^^^
  |

F507 `%`-format string has 2 placeholder(s) but 3 substitution(s)
 --> F50x.py:6:1
  |
6 | '%s %s' % (1, 2, 3)  # F507
  | ^^^^^^^^^^^^^^^^^^^
  |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:10:1
   |
10 | '%s %s' % {'k': 'v'}  # F503
   | ^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:22:1
   |
22 | '%s %s' % [*a]
   | ^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:29:1
   |
29 | '%s %s' % 42  # F507
   | ^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:30:1
   |
30 | '%s %s' % 3.14  # F507
   | ^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:31:1
   |
31 | '%s %s' % "hello"  # F507
   | ^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:32:1
   |
32 | '%s %s' % b"hello"  # F507
   | ^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:33:1
   |
33 | '%s %s' % True  # F507
   | ^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:34:1
   |
34 | '%s %s' % None  # F507
   | ^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:35:1
   |
35 | '%s %s' % ...  # F507
   | ^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:36:1
   |
36 | '%s %s' % f"hello {name}"  # F507
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:38:1
   |
38 | '%s %s' % -1  # F507 (unary op on int → int)
   | ^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:39:1
   |
39 | '%s %s' % (1 + 2)  # F507 (int + int → int)
   | ^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:40:1
   |
40 | '%s %s' % (not x)  # F507 (not → bool)
   | ^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:41:1
   |
41 | '%s %s' % ("a" + "b")  # F507 (str + str → str)
   | ^^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 2 placeholder(s) but 1 substitution(s)
  --> F50x.py:42:1
   |
42 | '%s %s' % (1 if True else 2)  # F507 (int if ... else int → int)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:57:1
   |
57 | 'hello' % 42  # F507
   | ^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:58:1
   |
58 | '' % 42  # F507
   | ^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:59:1
   |
59 | 'hello' % (1,)  # F507
   | ^^^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:62:1
   |
62 | 'hello' % banana  # F507
   | ^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:63:1
   |
63 | '' % banana  # F507
   | ^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:64:1
   |
64 | 'hello' % unknown_var  # F507
   | ^^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:65:1
   |
65 | 'hello' % get_value()  # F507
   | ^^^^^^^^^^^^^^^^^^^^^
   |

F507 `%`-format string has 0 placeholder(s) but 1 substitution(s)
  --> F50x.py:66:1
   |
66 | 'hello' % obj.attr  # F507
   | ^^^^^^^^^^^^^^^^^^
   |
