crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F509_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F509 `%`-format string has unsupported format character `j`
 --> F50x.py:4:1
  |
4 | '%j' % (1,)  # F509
  | ^^^^^^^^^^^
  |
